--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@ lib/test
 doc/_build
 python/test-graph.fa.out
 python/test-trunc.out
+.DS_Store
+*.swp
+*~.nib
+build/
+*.pbxuser
+*.perspective
+*.perspectivev3
+*.mode1v3
+*.mode2v3
