--- a/contrib/bleu/Makefile
+++ b/contrib/bleu/Makefile
@@ -14,9 +14,18 @@ bleu:
 	cd ../../ && make lib_files
 	cd ../external_lib && make 
 	make bleuexe
+	
+tests: 
+	cd ../../ && make lib_files
+	cd ../external_lib && make 
+	make bleutestsexe
 
 bleuexe: bleu.cpp $(KMERDIR)/hashtable.o $(KMERDIR)/ktable.o $(KMERDIR)/parsers.o $(EXTLIBDIR)/cBitArray.o
 	$(CXX) $(CXXFLAGS) -o bleu bleu.cpp $(KMERDIR)/hashtable.o $(KMERDIR)/ktable.o $(KMERDIR)/parsers.o $(EXTLIBDIR)/cBitArray.o
+
+bleutestsexe: bleutests.cpp $(KMERDIR)/hashtable.o $(KMERDIR)/ktable.o $(KMERDIR)/parsers.o $(EXTLIBDIR)/cBitArray.o
+	$(CXX) $(CXXFLAGS) -o bleu bleu.cpp $(KMERDIR)/hashtable.o $(KMERDIR)/ktable.o $(KMERDIR)/parsers.o $(EXTLIBDIR)/cBitArray.o
+
 
 #ktable.o: $(KMERDIR)/ktable.cc $(KMERDIR)/ktable.hh
 
